# app/Http/Requests/UpdateYpkApiRequest.php
@@ -5,7 +5,7 @@ namespace App\Http\Requests;
 use Illuminate\Contracts\Validation\ValidationRule;
 use Illuminate\Foundation\Http\FormRequest;
 
-class UpdateOrderApiRequest extends FormRequest
+class UpdateYpkApiRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -24,11 +24,8 @@ class UpdateOrderApiRequest extends FormRequest
     {
         return [
             'id' => 'required|string',
-            'productId' => 'required|string|exists:products,id',
-            'statusOrderId' => 'required|string',
-            'executorId' => 'required|string',
-            'customersComment' => 'required|string',
-            'userComment' => 'required|string'
+            'ypkName' => 'required|string',
+            'description' => 'required|string'
         ];
     }
 }
